<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@android:drawable/ic_menu_compass"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_book_ambulance"
            android:icon="@android:drawable/ic_menu_call"
            android:title="@string/menu_book_ambulance" />
        <item
            android:id="@+id/nav_emergency_contacts"
            android:icon="@android:drawable/ic_menu_my_calendar"
            android:title="@string/menu_emergency_contacts" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@android:drawable/ic_menu_myplaces"
            android:title="@string/menu_profile" />
    </group>

    <item android:title="@string/menu_other">
        <menu>
            <item
                android:id="@+id/nav_logout"
                android:icon="@android:drawable/ic_menu_close_clear_cancel"
                android:title="@string/menu_logout" />
        </menu>
    </item>
</menu>